--- a/Report/GeneticAlgorithm.tex
+++ b/Report/GeneticAlgorithm.tex
@@ -98,27 +98,18 @@
 	\centerline{\bf {Disponible en:}}
 	\centerline{\text{\url{github.com/JesseAngeles/Metaheuristicas}}}
 	
+
+	\bigskip
 	
-	
-	\newtheorem{Theorem}{\quad Theorem}[section]
-	
-	\newtheorem{Definition}[Theorem]{\quad Definition}
-	
-	\newtheorem{Corollary}[Theorem]{\quad Corollary}
-	
-	\newtheorem{Lemma}[Theorem]{\quad Lemma}
-	
-	\newtheorem{Example}[Theorem]{\quad Example}
-	
+	\bigskip
+
+	\textbf{Resumen} 
+		En esta práctica se describe el comportamiento, las partes esenciales, configuraciones, implementación y comparación de resultados de los algoritmos genéticos, como un algoritmo bioinspirado utilizado para la búsqueda de óptimos globales en problemas de optimización.
 	\bigskip
 	
 	\bigskip
 	
-	\begin{abstract} 
-		Se describe el comportamiento de los algoritmos geneticos para resolver problemas de optimización local.
-	\end{abstract}
-	
-	\keywords{Algoritmo, Algoritmo genético, Resultado óptimo}
+	\keywords{Algoritmo genético, Evolución, Operador, Resultado óptimo. }
 	
 	\clearpage
 	
@@ -128,14 +119,14 @@
 	\chapter*{Introducción}
 	\addcontentsline{toc}{chapter}{Introducción}
 	
-	\include{Algoritmo genetico}
-	\include{Seleccion}
-	\include{Cruza}
-	\include{Mutacion}
-	\include{Reemplazo}
-	\include{Problemas}
-	\include{Codigo}
-	\include{Resultados}
+	\input{Algoritmo genetico}
+	\input{Seleccion}
+	\input{Cruza}
+	\input{Mutacion}
+	\input{Reemplazo}
+	\input{Problemas}
+	\input{Codigo}
+	\input{Resultados}
 	
 	\chapter*{Conclusión}
 	\addcontentsline{toc}{chapter}{Conclusión}
