--- a/Report/Mutacion.tex
+++ b/Report/Mutacion.tex
@@ -1,20 +1,20 @@
 \chapter{Operador de Mutación}
 
-Una mutación es un cambio en el cromosoma que altera su valor; esta se aplica de forma independiente en cada individuo bajo cierta probabilidad $p$. La inclusión de mutaciones permite mantener la diversidad genética de la población y evita el estancamiento en óptimos locales cuando hay demasiada similitud entre individuos.
+Una mutación es un cambio en el cromosoma que altera su valor; esta se aplica de forma independiente a cada individuo bajo cierta probabilidad $p$. La inclusión de mutaciones permite mantener la diversidad genética de la población y evita el estancamiento en óptimos locales cuando hay demasiada similitud entre individuos.
 
-Dado que cada problema puede tener un espacio diferente (binario, reales, permutaciones), cada uno debe implementar una función que permita obtener un vecino aleatorio. Un vecino es una solución cercana a la actual, pero con una ligera variación. En este caso, la función \textit{Single Point} obtiene un vecino dada una solución actual, respetando la estructura del espacio de búsqueda.
+Dado que cada problema puede tener un espacio de búsqueda distinto (binario, real, permutacional), es necesario que cada uno implemente una función que permita obtener un vecino aleatorio. Un vecino es una solución cercana a la actual, pero con una ligera variación. En este contexto, la función \textit{Single Point} genera un vecino a partir de una solución dada, respetando la estructura del espacio correspondiente.
 
 \section{Single Point}
 
-Este operador evalúa, para cada individuo en la población, si debe aplicarse una mutación basada en la probabilidad establecida. Si la condición se cumple, el individuo es reemplazado por un vecino generado por la función específica del problema; de lo contrario, permanece igual.
+Este operador evalúa, para cada individuo en la población, si debe aplicarse una mutación con base en la probabilidad establecida. Si la condición se cumple, el individuo es reemplazado por un vecino generado por la función específica del problema; de lo contrario, permanece sin cambios.
 
-Este algoritmo permite mantener diversidad en la población sin alterar drásticamente la estructura de los individuos. Ademas, de que permite adaptarse a diferentes representaciones (binaria, real, permutaciones), aunque es fuertemente dependiente de la calidad de la función de \textit{getRandomNeighbour}.
+Este enfoque permite mantener la diversidad en la población sin alterar drásticamente la estructura de los individuos. Además, se adapta a diferentes tipos de representación (binaria, real o permutacional), aunque depende fuertemente de la calidad de la función \textit{getRandomNeighbour}.
 
 \begin{algorithm}[H]
-	\caption{Single Point Mutation \\ \textbf{Input} \{ population, problem, mutation\_rate \}}
+	\caption{Single Point Mutation \\ \textbf{Input:} \{ population, problem, mutation\_rate \}}
 	\begin{algorithmic}[1]
 		\Function{SinglePoint}{population, problem, mutation\_rate}
-		\State mutations $\gets$ [ ]
+		\State mutations $\gets$ [\,]
 		\For{individual \textbf{in} population}
 		\If{random() $\leq$ mutation\_rate}
 		\State neighbor $\gets$ problem.getRandomNeighbour(individual)
@@ -28,4 +28,3 @@ Este algoritmo permite mantener diversidad en la población sin alterar drástic
 	\end{algorithmic}
 	\label{alg:mutation_single}
 \end{algorithm}
-
