--- a/Report/referencias_GA.bib
+++ b/Report/referencias_GA.bib
@@ -1,11 +1,37 @@
 @online{evolucion,
-	“Evolución”. Genome.gov. Accedido el 19 de mayo de 2025. [En línea]. Disponible: https://www.genome.gov/es/genetics-glossary/Evolucion
+	author    = {{National Human Genome Research Institute}},
+	title     = {Evolución},
+	year      = {2025},
+	note      = {Accedido el 19 de mayo de 2025},
+	url       = {https://www.genome.gov/es/genetics-glossary/Evolucion}
 }
 
 @online{cromosoma,
-“Cromosoma”. Genome.gov. Accedido el 19 de mayo de 2025. [En línea]. Disponible: https://www.genome.gov/es/genetics-glossary/Cromosoma
+	author    = {{National Human Genome Research Institute}},
+	title     = {Cromosoma},
+	year      = {2025},
+	note      = {Accedido el 19 de mayo de 2025},
+	url       = {https://www.genome.gov/es/genetics-glossary/Cromosoma}
 }
 
 @online{evolucion_2,
-Welcome to the SCI2S web site | Soft Computing and Intelligent Information Systems. Accedido el 19 de mayo de 2025. [En línea]. Disponible: https://sci2s.ugr.es/sites/default/files/files/Teaching/GraduatesCourses/Algoritmica/Tema07-AlgoritmosGeneticos-12-13.pdf
+	author    = {{SCI2S - Universidad de Granada}},
+	title     = {Welcome to the SCI2S web site | Soft Computing and Intelligent Information Systems},
+	year      = {2025},
+	note      = {Accedido el 19 de mayo de 2025},
+	url       = {https://sci2s.ugr.es/sites/default/files/files/Teaching/GraduatesCourses/Algoritmica/Tema07-AlgoritmosGeneticos-12-13.pdf}
+}
+
+@misc{cec,
+	author    = {{Y. S. Ong, P. N. Suganthan, and T. Weise}},
+	title     = {{Definitions of CEC2017 Benchmark Suite}},
+	year      = {2017},
+	note      = {Accedido el 26 de marzo de 2025. [En línea]. Disponible: \url{ruta/local/o/enlace}}
+}
+
+@techreport{plot,
+	author    = {Awad, N. H. and Ali, M. Z. and Suganthan, P. N. and Liang, J. J. and Qu, B. Y.},
+	title     = {{Problem Definitions and Evaluation Criteria for the CEC 2017 Special Session and Competition on Single Objective Bound Constrained Real-Parameter Numerical Optimization}},
+	year      = {2016},
+	note      = {Accedido el 26 de marzo de 2025}
 }
